--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-lg-6 col-sm-12 pb-5" id="header-content">
                     <h1 class="header-text">GHOST</h1>
-                    <h2 class="pb-3" id="header-subtitle">The official open source rewrite of Ghost Selfbot</h2>
+                    <h2 class="pb-3" id="header-subtitle">The <span class="text-decoration-underline fw-bold">official</span> open source rewrite of Ghost Selfbot</h2>
                     <a href="https://github.com/bennyscripts/ghost/releases/latest" type="button" class="btn px-5 py-3 fw-bold download-btn mb-2">DOWNLOAD</a>
                 </div>
                 <div class="col-lg-6 col-sm-12" id="console-img-container">
