--- a/purchase/index.html
+++ b/purchase/index.html
@@ -1,3 +1,17 @@
-<script>
-  window.location.href = "https://www.youtube.com/watch?v=nsCIeklgp1M";
-</script>
+<html>
+  <head>
+    <title>Ghost - Purchase</title>
+    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="og:title" content="Ghost">
+    <meta name="og:description" content="Ghost v4.0.0 has been released!!">
+    <meta name="og:image" content="https://ghost.benny.fun/assets/banner.png">
+  </head>
+  <body>
+    <script>
+      window.location.href = "https://www.youtube.com/watch?v=nsCIeklgp1M";
+    </script>
+  </body>
+</html>
