--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <body>
         <div class="container header px-5">
             <div class="row">
-                <div class="col-lg-6 col-sm-12 pb-5" id="header-content">
+                <div class="col-lg-12 pb-5 text-center" id="header-content">
                     <h1 class="header-text">GHOST</h1>
                     <h2 class="pb-3" id="header-subtitle">The <span class="text-decoration-underline fw-bold">official</span> open source rewrite of Ghost Selfbot</h2>
                     <a href="https://github.com/bennyscripts/ghost/releases/latest" type="button" class="btn px-5 py-3 fw-bold download-btn mb-2">DOWNLOAD</a>
                 </div>
-                <div class="col-lg-6 col-sm-12" id="console-img-container">
-                    <img src="assets/console.jpg" alt="Photo of Ghost's console." class="img-fluid shadow" width="800">
+                <div class="col-lg-12 text-center mt-3" id="console-img-container">
+                    <img src="assets/gui.png" alt="Photo of Ghost's GUI." class="img-fluid shadow" width="800">
                 </div>
             </div>
         </div>
@@ -48,7 +48,7 @@
             </div>
         </div> -->
 
-        <div class="container-fluid" id="about" style="background-color: #ffffff09;">
+        <!-- <div class="container-fluid" id="about" style="background-color: #ffffff09;">
             <div class="container p-5">
                 <div class="row">
                     <div class="col-lg-8 col-md-12 col-sm-12">
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="footer container-fluid">
             <div class="container py-5 text-center">
