--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             </div>
 
             <div class="row">
-                <div class="col-4">
-                    <div class="card">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="card mb-3">
                         <!-- <div class="card-header" style="background-image: url('/assets/embeds.png'); background-position: bottom; background-size: cover; height: 200px;"></div> -->
                         <div class="card-body">
                             <h5 class="card-title"><i class="fa-solid fa-paintbrush fa-xs pe-1"></i> Customisation</h5>
@@ -67,16 +67,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
-                    <div class="card">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="card mb-3">
                         <div class="card-body">
                             <h5 class="card-title"><i class="fa-solid fa-code-branch fa-xs pe-1"></i> Open Source</h5>
                             <p class="card-text">Ghost is completely open source and free to use! Feel free to contribute or fork the project on GitHub.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
-                    <div class="card">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="card mb-3">
                         <!-- <div class="card-header" style="background-image: url('/assets/embeds.png'); background-position: bottom; background-size: cover; height: 200px;"></div> -->
                         <div class="card-body">
                             <h5 class="card-title"><i class="fa-solid fa-list fa-xs pe-1"></i> 150+ Commands</h5>
