--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <meta name="og:title" content="Ghost - Your Discord, Your Rules">
         <meta name="og:description" content="Ghost is a powerful and user-friendly selfbot for Discord, designed to enhance your experience with a sleek interface and a wide range of features.">
-        <meta name="og:image" content="https://ghostt.cc/assets/ghost-2.png">
+        <meta name="og:image" content="https://ghostt.cc/assets/ghost-2.jpg">
 
         <link rel="stylesheet" href="assets/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
