--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12 text-center mt-5">
-                        <div id="console-img-container">
+                        <div id="console-img-container" class="custom-container">
                             <img src="assets/new-gui.png" class="img-fluid shadow-lg" style="border-radius: 10px;">
                         </div>
                     </div>
@@ -100,7 +100,7 @@
                 <h1 class="header-text">COMING SOON</h1>
                 <h3 class="mb-5 pb-3">The most powerful tool we've ever built!</h3>
                 <div id="spypet-img-container">
-                    <img src="assets/spypet.png" class="img-fluid shadow-lg" style="border-radius: 10px;">
+                    <img src="assets/surveillance.png" class="img-fluid shadow-lg" style="border-radius: 10px;">
                 </div>
                 <p class="fst-italic mt-5" style="color: #555555!important;">06/2026</p>
             </div>
