--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="container custom-container" style="margin-top: 12rem; margin-bottom: 12rem;" id="setup">
             <div class="mb-4">
                 <h2>Getting Started</h2>
-                <p>Ghost is best run straight from the source code. Run the below commands in your terminal to setup Ghost</p>
+                <p>If you want to run Ghost from the source code, recommended for Windows users run the commands below.</p>
             </div>
             <div class="terminal">
                 <p>git clone https://github.com/ghostselfbot/ghost</p>
@@ -118,6 +118,12 @@
                 <p>source .venv/bin/activate  <span class="terminal-comment"># or on Windows: .\.venv\Scripts\activate</span></p>
                 <p>pip install -r requirements.txt</p>
                 <p>python3 ghost.py</p>
+            </div>
+            <div class="mt-4 mb-2">
+                <p>If you're using macOS or Linux, run the command below to get a compiled binary.</p>
+            </div>
+            <div class="terminal">
+                <p>$ curl -sSL https://www.ghostt.cc/assets/unix-install.sh | bash</p>
             </div>
             <div class="mt-4">
                 <a href="https://github.com/ghostselfbot/ghost/releases/latest" class="btn download-btn">Download</a>
