Remove blur from surveillance

--- a/index.html
+++ b/index.html
@@ -97,12 +97,11 @@
 
         <div class="container-fluid spypet">
             <div class="custom-container container text-center py-5 my-5">
-                <h1 class="header-text">COMING SOON</h1>
+                <h1 class="header-text">SURVEILLANCE</h1>
                 <h3 class="mb-5 pb-3">The most powerful tool we've ever built!</h3>
                 <div id="spypet-img-container">
                     <img src="assets/surveillance.png" class="img-fluid shadow-lg" style="border-radius: 10px;">
                 </div>
-                <p class="fst-italic mt-5" style="color: #555555!important;">06/2026</p>
             </div>
         </div>
 
