Change getting started text

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="container custom-container" style="margin-top: 12rem; margin-bottom: 12rem;" id="setup">
             <div class="mb-4">
                 <h2>Getting Started</h2>
-                <p>If you want to run Ghost from the source code, recommended for Windows users run the commands below.</p>
+                <p>Use the commands below to run Ghost from source code. If you're using Windows, press the download button below.</p>
             </div>
             <div class="terminal">
                 <p>git clone https://github.com/ghostselfbot/ghost</p>
@@ -122,7 +122,7 @@
                 <p>If you're using macOS or Linux, run the command below to get a compiled binary.</p>
             </div>
             <div class="terminal">
-                <p>$ curl -sSL https://www.ghostt.cc/assets/unix-install.sh | bash</p>
+                <p>curl -sSL https://www.ghostt.cc/assets/unix-install.sh | bash</p>
             </div>
             <div class="mt-4">
                 <a href="https://github.com/ghostselfbot/ghost/releases/latest" class="btn download-btn">Download</a>
